--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <section class="introduction">
             <h1 class="title"> I'm Lawrence Glad to See You</h1>
             <div class="description">I’m a software developer! I can help you build a product , feature or website Look
-                through some of my work and experience! If you like what you see and have a project you need coded,
-                don’t
+                through some of my work and experience! If you like what you see and have a project you need coded,don’t
                 hestiate to contact me.</div>
             <h2 class="social order">LET'S CONNECT</h2>
             <ul class="social-links">
