--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section>
         <header>
             <nav>
-                <div class="logo">My Logo</div>
+                <a class="logo">Lawrence</a>
                 <div>
                     <i class="fa-solid fa-bars menu-bar"></i>
                 </div>
@@ -26,10 +26,10 @@
             </nav>
         </header>
         <section class="introduction">
-            <h1 class="title"> I'm Lawrence Glad to See You</h1>
-            <div class="description">I’m a software developer! I can help you build a product , feature or website Look
+            <h1 class="title"> I'm Lawrence Glad to See You!</h1>
+            <p class="description">I’m a software developer! I can help you build a product , feature or website Look
                 through some of my work and experience! If you like what you see and have a project you need coded,don’t
-                hestiate to contact me.</div>
+                hestiate to contact me.</p>
             <h2 class="social order">LET'S CONNECT</h2>
             <ul class="social-links">
                 <li><a href="#"><i class="fa-brands fa-twitter li1"></i></a></li>
