--- a/index.html
+++ b/index.html
@@ -181,6 +181,54 @@
             </div>
 
         </section>
+        <section class="section5">
+            <div class="top">
+                <h1 class="about-heading">About
+                    Myself
+                </h1>
+                <p class="about-description">Hello I’m a software developer! I can help you build a product , feature or
+                    website
+                    Look through some of my
+                    work and experience! If you like what you see and have a project you need coded, don’t hestiate to
+                    contact
+                    me.</p>
+                <h2 class="social order2">LET'S CONNECT</h2>
+                <ul class="social-links">
+                    <li><a href="#"><i class="fa-brands fa-twitter li1"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-linkedin li2"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-m li3"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-github li4"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-angellist li5"></i></a></li>
+                </ul>
+                <button class="resume">Get my resume</button>
+            </div>
+            <div class="skills-list">
+                <div class="languages">
+                    <div class="container">
+                        <span class="lang">Languages</span>
+                        <i class="fa-solid fa-angle-down btn1"></i>
+                    </div>
+                    <div class="language-list">
+                        <ul>
+                            <li class="l-list"><img class="images" src=".images/Ellipse 1(1).png"><span
+                                    class="js">Javascript</span></li>
+                            <li class="l-list"><img class="images" src=".images/Ellipse 1(2).png"><span
+                                    class="js">HTML</span></li>
+                            <li class="l-list"><img class="images" src=".images/Ellipse 1(3).png"><span class="js">CSS
+                                </span></li>
+                        </ul>
+    
+                    </div>
+                </div>
+                <div class="container">
+                    <span class="lang">Frameworks</span>
+                    <i class="fa-solid fa-angle-right btn1"></i>
+                </div>
+                <div class="container">
+                    <span class="lang">Skills</span>
+                    <i class="fa-solid fa-angle-right btn1"></i>
+                </div>
+            </div>
 </body>
 
 </html>
