modified html and css files to match the figma design in terms of button hover, button active, and button disabled

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                 <p class="section-description0">A daily selection of privately personalized reads; no accounts or
                     sign-ups
                     required.</p>
-                <div class="tags">
-                    <div class="li11">
+                <ul class="tags">
+                    <li class="li11">
                         <article class="text1">html</article>
-                    </div>
-                    <div class="li22">
+                    </li>
+                    <li class="li22">
                         <article class="text2">css</article>
-                    </div>
-                    <div class="li33">
+                    </li>
+                    <li class="li33">
                         <article class="text3">javascript
-                    </div>
-                </div>
+                    </li>
+                </ul>
                 <div class="action">
                     <button class="btn">See Project</button>
                 </div>
@@ -96,17 +96,17 @@
                 <p class="section-description1">A smart assistant to make driving more safe, efficient, and fun by
                     unlocking
                     your most expensive computer: your car.</p>
-                <div class="tags">
-                    <div class="li11">
+                <ul class="tags">
+                    <li class="li11">
                         <article class="text1">html</article>
-                    </div>
-                    <div class="li22">
+                    </li>
+                    <li class="li22">
                         <article class="text2">css</article>
-                    </div>
-                    <div class="li33">
+                    </li>
+                    <li class="li33">
                         <article class="text3">javascript
-                    </div>
-                </div>
+                    </li>
+                </ul>
                 <div class="action">
                     <button class="btn">See Project</button>
                 </div>
@@ -130,17 +130,17 @@
                 <p class="section-description0">A daily selection of privately personalized reads; no
                     accounts or sign-ups
                     required.</p>
-                <div class="tags">
-                    <div class="li11">
+                <ul class="tags">
+                    <li class="li11">
                         <article class="text1">html</article>
-                    </div>
-                    <div class="li22">
+                    </li>
+                    <li class="li22">
                         <article class="text2">css</article>
-                    </div>
-                    <div class="li33">
+                    </li>
+                    <li class="li33">
                         <article class="text3">javascript
-                    </div>
-                </div>
+                    </li>
+                </ul>
                 <div class="action">
                     <button class="btn">See Project</button>
                 </div>
@@ -164,17 +164,17 @@
                 <p class="section-description0">A daily selection of privately personalized reads; no
                     accounts or sign-ups
                     required.</p>
-                <div class="tags">
-                    <div class="li11">
+                <ul class="tags">
+                    <li class="li11">
                         <article class="text1">html</article>
-                    </div>
-                    <div class="li22">
+                    </li>
+                    <li class="li22">
                         <article class="text2">css</article>
-                    </div>
-                    <div class="li33">
+                    </li>
+                    <li class="li33">
                         <article class="text3">javascript
-                    </div>
-                </div>
+                    </li>
+                </ul>
                 <div class="action">
                     <button class="btn">See Project</button>
                 </div>
@@ -217,7 +217,7 @@
                             <li class="l-list"><img class="images" src=".images/Ellipse 1(3).png"><span class="js">CSS
                                 </span></li>
                         </ul>
-    
+
                     </div>
                 </div>
                 <div class="container">
