add max length to text field and textarea

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
                 a project that needs coding. I’d love to help with it
             </p>
             <form action="https://formspree.io/f/meqdkrwy" class="contact-form" method="post">
-                <input type="text" class="input-field" name="name" id="name" placeholder="Your Name" maxlength=""
+                <input type="text" class="input-field" name="name" id="name" placeholder="Your Name" maxlength="30"
                     required>
                 <input type="email" class="input-field" name="email" id="email" placeholder="Email" required>
                 <textarea name="message" class="text-area" id="message" cols="30" rows="10"
-                    placeholder="Write your message here" maxlength="" required></textarea>
+                    placeholder="Write your message here" maxlength="500" required></textarea>
                 <input type="submit" class="submit-btn" value="Get in Touch">
             </form>
             <hr class="indicator" />
