modify html and css files to match the figma desktop design

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                 <p class="section-description0">A daily selection of privately personalized reads; no accounts or
                     sign-ups
                     required.</p>
+                <p class="section-description1">Exploring the future of media in Facebook's first Virtual Reality app; a
+                    place to discover and enjoy 360 photos and videos on Gear VR.</p>
                 <ul class="tags">
                     <li class="li11">
                         <article class="text1">html</article>
