--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <section class="section2">
             <div class="right-block">
                 <img class="image-section2" src=".images/Snapshoot Portfolio1.png" alt="project image">
+                <img class="img-sec2" src=".images/Snapshoot Portfolio section2.png" alt="project image">
             </div>
             <div class="left-block">
                 <div class="experience1">
@@ -102,6 +103,9 @@
                     <li class="li11">
                         <article class="text1">html</article>
                     </li>
+                    <li class="li222">
+                        <article class="text22"> Ruby on rails </article>
+                    </li>
                     <li class="li22">
                         <article class="text2">css</article>
                     </li>
@@ -118,6 +122,7 @@
         <section class="section3">
             <div class="right-block">
                 <img class="image-section3" src=".images/Snapshoot Portfolio2.png" alt="project image">
+                <img class="img-sec3" src=".images/Snapshoot Portfolio section33.png" alt="project image">
             </div>
             <div class="left-block">
                 <div class="experience">
@@ -132,9 +137,15 @@
                 <p class="section-description0">A daily selection of privately personalized reads; no
                     accounts or sign-ups
                     required.</p>
+                <p class="section-description1">A daily selection of privately personalized reads; no
+                    accounts or sign-ups
+                    required.</p>
                 <ul class="tags">
                     <li class="li11">
                         <article class="text1">html</article>
+                    </li>
+                    <li class="li222">
+                        <article class="text22"> Ruby on rails </article>
                     </li>
                     <li class="li22">
                         <article class="text2">css</article>
@@ -152,6 +163,7 @@
         <section class="section4">
             <div class="right-block">
                 <img class="image-section4" src=".images/Snapshoot Portfolio3.png" alt="project image">
+                <img class="img-sec4" src=".images/Snapshoot Portfolio section 3.png" alt="project image">
             </div>
             <div class="left-block">
                 <div class="experience1">
@@ -166,9 +178,14 @@
                 <p class="section-description0">A daily selection of privately personalized reads; no
                     accounts or sign-ups
                     required.</p>
+                <p class="section-description1">Experimental content creation feature that allows users to add to an
+                    existing story over the course of a day without spamming their friends.</p>
                 <ul class="tags">
                     <li class="li11">
                         <article class="text1">html</article>
+                    </li>
+                    <li class="li222">
+                        <article class="text22"> Ruby on rails </article>
                     </li>
                     <li class="li22">
                         <article class="text2">css</article>
