add nav links to the desktop version

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 <div>
                     <i class="fa-solid fa-bars menu-bar"></i>
                 </div>
+                <ul class="nav-links">
+                    <li class="port1"><a href="#portfolio">Portfolio </a></li>
+                    <li class="ab1"><a href="#about">About </a></li>
+                    <li class="cont1"><a href="#contact">Contact</a></li>
+                </ul>
 
 
             </nav>
