make the web responsive by changing the fixed width and height to relative parameters

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <li class="li11">
                         <article class="text1">html</article>
                     </li>
+                    <li class="li222">
+                        <article class="text22"> Ruby on rails </article>
+                    </li>
                     <li class="li22">
                         <article class="text2">css</article>
                     </li>
