--- a/index.html
+++ b/index.html
@@ -238,10 +238,11 @@
                     <div class="language-list">
                         <ul>
                             <li class="l-list"><img class="images" src=".images/Ellipse 1(1).png"><span
-                                    class="js">Javascript</span></li>
+                                    class="js js1">Javascript</span></li>
                             <li class="l-list"><img class="images" src=".images/Ellipse 1(2).png"><span
-                                    class="js">HTML</span></li>
-                            <li class="l-list"><img class="images" src=".images/Ellipse 1(3).png"><span class="js">CSS
+                                    class="js js2">HTML</span></li>
+                            <li class="l-list js3"><img class="images" src=".images/Ellipse 1(3).png"><span
+                                    class="js">CSS
                                 </span></li>
                         </ul>
 
