modify css and html file to make the image on section 4 appear on the right

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
 
         </section>
         <section class="section4">
-            <div class="right-block">
+            <div class="right-block00">
                 <img class="image-section4" src=".images/Snapshoot Portfolio3.png" alt="project image">
                 <img class="img-sec4" src=".images/Snapshoot Portfolio section 3.png" alt="project image">
             </div>
-            <div class="left-block">
+            <div class="left-block00">
                 <div class="experience1">
                     <h1 class="section-title1">Multi-Post
                         Stories</h1>
