--- a/index.html
+++ b/index.html
@@ -237,22 +237,21 @@
                     </div>
                     <div class="language-list">
                         <ul>
-                            <li class="l-list js1"><img class="images" src=".images/Ellipse 1(1).png"><span
-                                    class="js">Javascript</span></li>
-                            <li class="l-list js2"><img class="images" src=".images/Ellipse 1(2).png"><span
+                            <li class="l-list"><img class="images" src=".images/Ellipse 1(1).png"><span
+                                    class="js">Js</span></li>
+                            <li class="l-list"><img class="images" src=".images/Ellipse 1(2).png"><span
                                     class="js">HTML</span></li>
-                            <li class="l-list js3"><img class="images" src=".images/Ellipse 1(3).png"><span
-                                    class="js">CSS
+                            <li class="l-list"><img class="images" src=".images/Ellipse 1(3).png"><span class="js">CSS
                                 </span></li>
                         </ul>
 
                     </div>
                 </div>
-                <div class="container">
+                <div class="container1">
                     <span class="lang">Frameworks</span>
                     <i class="fa-solid fa-angle-right btn1"></i>
                 </div>
-                <div class="container">
+                <div class="container2">
                     <span class="lang">Skills</span>
                     <i class="fa-solid fa-angle-right btn1"></i>
                 </div>
