--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </section>
         <section class="section1">
             <div class="right-block">
-                <img class="img-section1" src="../images/Snapshoot Portfolio.png" alt="project image">
-                <img class="img-sec1" src="../images/Snapshoot Portfolio-section1.png" alt="project image">
+                <img class="img-section1" src="images/Snapshoot Portfolio.png" alt="project image">
+                <img class="img-sec1" src="images/Snapshoot Portfolio-section1.png" alt="project image">
             </div>
             <div class="left-block">
                 <div class="experience">
@@ -87,8 +87,8 @@
         </section>
         <section class="section2">
             <div class="right-block">
-                <img class="image-section2" src="../images/Snapshoot Portfolio1.png" alt="project image">
-                <img class="img-sec2" src="../images/Snapshoot Portfolio section2.png" alt="project image">
+                <img class="image-section2" src="images/Snapshoot Portfolio1.png" alt="project image">
+                <img class="img-sec2" src="images/Snapshoot Portfolio section2.png" alt="project image">
             </div>
             <div class="left-block">
                 <div class="experience1">
@@ -129,8 +129,8 @@
         </section>
         <section class="section3">
             <div class="right-block">
-                <img class="image-section3" src="../images/Snapshoot Portfolio2.png" alt="project image">
-                <img class="img-sec3" src="../images/Snapshoot Portfolio section33.png" alt="project image">
+                <img class="image-section3" src="images/Snapshoot Portfolio2.png" alt="project image">
+                <img class="img-sec3" src="images/Snapshoot Portfolio section33.png" alt="project image">
             </div>
             <div class="left-block">
                 <div class="experience">
@@ -170,8 +170,8 @@
         </section>
         <section class="section4">
             <div class="right-block00">
-                <img class="image-section4" src="../images/Snapshoot Portfolio3.png" alt="project image">
-                <img class="img-sec4" src="/images/Snapshoot Portfolio section 3.png" alt="project image">
+                <img class="image-section4" src="images/Snapshoot Portfolio3.png" alt="project image">
+                <img class="img-sec4" src="images/Snapshoot Portfolio section 3.png" alt="project image">
             </div>
             <div class="left-block00">
                 <div class="experience1">
@@ -237,11 +237,11 @@
                     </div>
                     <div class="language-list">
                         <ul>
-                            <li class="l-list"><img class="images" src="../images/Ellipse 1(1).png"><span
+                            <li class="l-list"><img class="images" src="images/Ellipse 1(1).png"><span
                                     class="js">Js</span></li>
-                            <li class="l-list"><img class="images" src="../images/Ellipse 1(2).png"><span
+                            <li class="l-list"><img class="images" src="images/Ellipse 1(2).png"><span
                                     class="js">HTML</span></li>
-                            <li class="l-list"><img class="images" src="../images/Ellipse 1(3).png"><span class="js">CSS
+                            <li class="l-list"><img class="images" src="images/Ellipse 1(3).png"><span class="js">CSS
                                 </span></li>
                         </ul>
 
