--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="section1">
             <div class="right-block">
-                <img class="img-section1" src="images/Snapshoot Portfolio.png" alt="project image">
+                <img class="img-section1" src="images/Snapshoot Portfolio" alt="project image">
                 <img class="img-sec1" src="images/Snapshoot Portfolio-section1.png" alt="project image">
             </div>
             <div class="left-block">
