fix section 2 image

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 
         </section>
         <section class="section2">
+            <div class="right-block">
+                <img class="img-section2" src="images/Snapshoot Portfolio1.png" alt="project image">
+                <img class="img-sec2" src="images/Snapshoot Portfolio section2.png" alt="project image">
             </div>
             <div class="left-block11">
                 <div class="experience1">
