--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
 
                     </div>
                 </div>
-                <div class="container1">
+                <div class="container1 container">
                     <span class="lang">Frameworks</span>
                     <i class="fa-solid fa-angle-right btn1"></i>
                 </div>
-                <div class="container2">
+                <div class="container2 container">
                     <span class="lang">Skills</span>
                     <i class="fa-solid fa-angle-right btn1"></i>
                 </div>
