add links to social media icons

--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
                 hestiate to contact me.</p>
             <h2 class="social order">LET'S CONNECT</h2>
             <ul class="social-links">
-                <li><a href="#"><i class="fa-brands fa-twitter li1"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin li2"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-m li3"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-github li4"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-angellist li5"></i></a></li>
+                <li><a href="https://twitter.com/lawrenc98789206"><i class="fa-brands fa-twitter li1"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/lawrence-kioko-972035240/"><i
+                            class="fa-brands fa-linkedin li2"></i></a></li>
+                <li><a href="https://medium.com/@lorenkioko"><i class="fa-brands fa-m li3"></i></a></li>
+                <li><a href="https://github.com/Kidd254"><i class="fa-brands fa-github li4"></i></a></li>
+                <li><a href="https://angel.co/jobs?ref=onboarding"><i class="fa-brands fa-angellist li5"></i></a></li>
             </ul>
 
         </section>
@@ -221,11 +222,13 @@
                     me.</p>
                 <h2 class="social order2">LET'S CONNECT</h2>
                 <ul class="social-links">
-                    <li><a href="#"><i class="fa-brands fa-twitter li1"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin li2"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-m li3"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-github li4"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-angellist li5"></i></a></li>
+                    <li><a href="https://twitter.com/lawrenc98789206"><i class="fa-brands fa-twitter li1"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/lawrence-kioko-972035240/"><i
+                                class="fa-brands fa-linkedin li2"></i></a></li>
+                    <li><a href="https://medium.com/@lorenkioko"><i class="fa-brands fa-m li3"></i></a></li>
+                    <li><a href="https://github.com/Kidd254"><i class="fa-brands fa-github li4"></i></a></li>
+                    <li><a href="https://angel.co/jobs?ref=onboarding"><i class="fa-brands fa-angellist li5"></i></a>
+                    </li>
                 </ul>
                 <button class="resume">Get my resume</button>
             </div>
