--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
 
         </section>
         <section class="section2">
-            <div class="right-block">
+            <div class="right-block00">
                 <img class="img-section2" src="images/Snapshoot Portfolio1.png" alt="project image">
                 <img class="img-sec2" src="images/Snapshoot Portfolio section2.png" alt="project image">
             </div>
-            <div class="left-block11">
+            <div class="left-block00">
                 <div class="experience1">
                     <h1 class="section-title1">Multi-Post
                         Stories</h1>
