--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1a66ebfe2a.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -19,17 +20,22 @@
             <nav>
                 <a class="logo">Lawrence</a>
                 <div>
-                    <i class="fa-solid fa-bars menu-bar"></i>
+                    <i class="fa-solid fa-bars menu-bar" id="menu_bar"></i>
                 </div>
                 <ul class="nav-links">
                     <li class="port1"><a href="#portfolio">Portfolio </a></li>
                     <li class="ab1"><a href="#about">About </a></li>
                     <li class="cont1"><a href="#contact">Contact</a></li>
                 </ul>
-
-
             </nav>
         </header>
+        <div>
+            <ul class="nav-links1" id="menu">
+                <li class="port11"><a href="#portfolio">Portfolio </a></li>
+                <li class="ab11"><a href="#about">About </a></li>
+                <li class="cont11"><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
         <section class="introduction">
             <h1 class="title"> I'm Lawrence Glad to See You!</h1>
             <p class="description">I’m a software developer! I can help you build a product , feature or website Look
