add functinality to the menu bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1a66ebfe2a.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+
 </head>
 
 <body>
@@ -21,21 +21,23 @@
                 <a class="logo">Lawrence</a>
                 <div>
                     <i class="fa-solid fa-bars menu-bar" id="menu_bar"></i>
+                    <i class="fa-solid fa-xmark menu-bar" id="btn"></i>
                 </div>
                 <ul class="nav-links">
                     <li class="port1"><a href="#portfolio">Portfolio </a></li>
                     <li class="ab1"><a href="#about">About </a></li>
                     <li class="cont1"><a href="#contact">Contact</a></li>
                 </ul>
+                <div class="menu-items">
+                    <ul class="nav-links1" id="menu">
+                        <li class="port11"><a href="#portfolio">Portfolio </a></li>
+                        <li class="ab11"><a href="#about">About </a></li>
+                        <li class="cont11"><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
-        <div>
-            <ul class="nav-links1" id="menu">
-                <li class="port11"><a href="#portfolio">Portfolio </a></li>
-                <li class="ab11"><a href="#about">About </a></li>
-                <li class="cont11"><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
+
         <section class="introduction">
             <h1 class="title"> I'm Lawrence Glad to See You!</h1>
             <p class="description">I’m a software developer! I can help you build a product , feature or website Look
@@ -50,7 +52,6 @@
                 <li><a href="https://github.com/Kidd254"><i class="fa-brands fa-github li4"></i></a></li>
                 <li><a href="https://angel.co/jobs?ref=onboarding"><i class="fa-brands fa-angellist li5"></i></a></li>
             </ul>
-
         </section>
         <section class="section1">
             <div class="right-block">
@@ -285,6 +286,7 @@
 
 
         </section>
+        <script type="text/javascript" src="script.js"></script>
 </body>
 
 </html>
