Add new class to a tags from menu mobile

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </ul>
                 <div class="menu-items">
                     <ul class="nav-links1" id="menu">
-                        <li class="port11"><a href="#portfolio">Portfolio </a></li>
-                        <li class="ab11"><a href="#about">About </a></li>
-                        <li class="cont11"><a href="#contact">Contact</a></li>
+                        <li><a class="h-menu" href="#portfolio">Portfolio </a></li>
+                        <li><a class="h-menu" href="#about">About </a></li>
+                        <li><a class="h-menu" href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
