modify the icons container to have relative position

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <nav>
                 <a class="logo">Lawrence</a>
-                <div>
+                <div class="menu-icons">
                     <i class="fa-solid fa-bars menu-bar" id="menu_bar"></i>
                     <i class="fa-solid fa-xmark menu-bar" id="btn"></i>
                 </div>
