Add some changes to styles and functions

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
 </head>
 
 <body>
-    <section>
-        <header>
-            <nav>
-                <a class="logo">Lawrence</a>
-                <div class="menu-icons">
-                    <i class="fa-solid fa-bars menu-bar" id="menu_bar"></i>
-                    <i class="fa-solid fa-xmark menu-bar" id="btn"></i>
-                </div>
-                <ul class="nav-links">
-                    <li class="port1"><a href="#portfolio">Portfolio </a></li>
-                    <li class="ab1"><a href="#about">About </a></li>
-                    <li class="cont1"><a href="#contact">Contact</a></li>
-                </ul>
-                <div class="menu-items">
-                    <ul class="nav-links1" id="menu">
-                        <li><a class="h-menu" href="#portfolio">Portfolio </a></li>
-                        <li><a class="h-menu" href="#about">About </a></li>
-                        <li><a class="h-menu" href="#contact">Contact</a></li>
+        <section>
+            <header>
+                <nav>
+                    <a class="logo">Lawrence</a>
+                    <div class="menu-icons">
+                        <i class="fa-solid fa-bars menu-bar" id="menu_bar"></i>
+                        <i class="fa-solid fa-xmark menu-bar" id="btn"></i>
+                    </div>
+                    <ul class="nav-links">
+                        <li class="port1"><a href="#portfolio">Portfolio </a></li>
+                        <li class="ab1"><a href="#about">About </a></li>
+                        <li class="cont1"><a href="#contact">Contact</a></li>
                     </ul>
-                </div>
-            </nav>
-        </header>
-
+                    <div class="menu-items">
+                        <ul class="nav-links1" id="menu">
+                            <li><a class="h-menu" href="#portfolio">Portfolio </a></li>
+                            <li><a class="h-menu" href="#about">About </a></li>
+                            <li><a class="h-menu" href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+        </section>
         <section class="introduction">
             <h1 class="title"> I'm Lawrence Glad to See You!</h1>
             <p class="description">I’m a software developer! I can help you build a product , feature or website Look
@@ -283,8 +283,6 @@
                 <input type="submit" class="submit-btn" value="Get in Touch">
             </form>
             <hr class="indicator" />
-
-
         </section>
         <script type="text/javascript" src="script.js"></script>
 </body>
