Add new rules in styles.css & function to sript.js

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <li><a href="https://github.com/Kidd254"><i class="fa-brands fa-github li4"></i></a></li>
             <li><a href="https://angel.co/jobs?ref=onboarding"><i class="fa-brands fa-angellist li5"></i></a></li>
         </ul>
-        <div class="sections">
+    </section>
+    <section class="sections">
 
-        </div>
     </section>
     <section class="section1">
         <div class="right-block">
@@ -94,7 +94,6 @@
                 <button class="btn">See Project</button>
             </div>
         </div>
-
     </section>
     <section class="section2">
         <div class="right-block00">
