add the pop up content

--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn">See Project</button>
+                <button class="btn"><a class="source" href="#">See Project</a></button>
             </div>
         </div>
+    </section>
+    <section class="sections">
+
     </section>
     <section class="section2">
         <div class="right-block00">
@@ -135,6 +138,56 @@
                 <button class="btn">See Project</button>
             </div>
         </div>
+
+        <div class="Recentwork1">
+            <div class="modal-header">
+                <h1 class="recent-title">Keeping track of hundreds of components website</h1>
+                <div class="crossimg">
+                    <img src="./img/Icon.png" alt="">
+                </div>
+            </div>
+            <ul class="languageboxes1">
+                <li class="css-display">css</li>
+                <li>html</li>
+                <li>bootstrap</li>
+                <li>Ruby on rails</li>
+            </ul>
+
+            <div class="works1">
+                <img class="f-img" src="./img/Snapshoot Portfolio.png" alt="" class="worksimg1" />
+                <div class="worksdescription1">
+                    <p class="recent-description">
+                        Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry.
+                        Lorem Ipsum has been the <br> industry's standard dummy text ever since the 1500s,<br>
+                        when an unknown printer took a galley of type and <br> scrambled it 1960s with the
+                        releaLorem Ipsum is simply <br> dummy text of the printing and typesetting industry. <br>
+                        Lorem Ipsum has been the industry's standard dummy <br> text ever since the 1500s,
+                        when an unknown printer <br> took a galley of type and scrambled it 1960s with the <br> releax
+                        map lapora verita.
+                    </p>
+                    <div class="recent-btn">
+                        <button class="button1">
+                            <a href="http://">
+                                See Live
+                                <img class="live" src="./SVG/Icon-see live.svg" alt="">
+                            </a>
+
+                        </button>
+
+                        <button class="button2">
+                            <a href="http://">
+                                See Source
+                                <img class="source" src="./img/git.png" alt="">
+                            </a>
+                        </button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="sections">
 
     </section>
     <section class="section3">
@@ -178,6 +231,9 @@
         </div>
 
     </section>
+    <section class="sections">
+
+    </section>
     <section class="section4">
         <div class="right-block00">
             <img class="image-section4" src="images/Snapshoot Portfolio3.png" alt="project image">
@@ -216,6 +272,9 @@
                 <button class="btn">See Project</button>
             </div>
         </div>
+
+    </section>
+    <section class="sections">
 
     </section>
     <section class="section5" id="about">
