--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="modal-header">
                 <h1 class="recent-title">Keeping track of hundreds of components website</h1>
                 <div class="crossimg">
-                    <img src="./img/Icon.png" alt="">
+                    <img src="#" alt="">
                 </div>
             </div>
             <ul class="languageboxes1">
@@ -154,7 +154,7 @@
             </ul>
 
             <div class="works1">
-                <img class="f-img" src="./img/Snapshoot Portfolio.png" alt="" class="worksimg1" />
+                <img class="f-img" src="./images/Snapshoot Portfolio.png" alt="" class="worksimg1" />
                 <div class="worksdescription1">
                     <p class="recent-description">
                         Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry.
@@ -169,7 +169,7 @@
                         <button class="button1">
                             <a href="http://">
                                 See Live
-                                <img class="live" src="./SVG/Icon-see live.svg" alt="">
+                                <img class="live" src="#" alt="">
                             </a>
 
                         </button>
@@ -177,7 +177,7 @@
                         <button class="button2">
                             <a href="http://">
                                 See Source
-                                <img class="source" src="./img/git.png" alt="">
+                                <img class="source" src="#" alt="">
                             </a>
                         </button>
                     </div>
