modify html and css files

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn">See Project</button>
+                <button class="btn btn1">See Project</button>
             </div>
         </div>
 
