--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             <li><a href="https://angel.co/jobs?ref=onboarding"><i class="fa-brands fa-angellist li5"></i></a></li>
         </ul>
     </section>
-    <section class="sections">
 
-    </section>
     <section class="section1">
         <div class="right-block">
             <img class="img-section1" src="images/Snapshoot Portfolio.png" alt="project image">
@@ -94,10 +92,11 @@
                 <button class="btn"><a class="source" href="#">See Project</a></button>
             </div>
         </div>
-    </section>
-    <section class="sections">
+        <section class="sections">
 
+        </section>
     </section>
+
     <section class="section2">
         <div class="right-block00">
             <img class="img-section2" src="images/Snapshoot Portfolio1.png" alt="project image">
@@ -154,7 +153,7 @@
             </ul>
 
             <div class="works1">
-                <img class="f-img" src="./images/Snapshoot Portfolio.png" alt="" class="worksimg1" />
+                <img class="f-img" src="images/Snapshoot Portfolio.png" alt="" class="worksimg1" />
                 <div class="worksdescription1">
                     <p class="recent-description">
                         Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry.
