fix and display pop up

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn"><a class="source" href="#">See Project</a></button>
+                <button class="btn" id="pop-btn">See Project</button>
             </div>
         </div>
 
@@ -174,7 +174,7 @@
 
                         </button>
 
-                        <button class="button2">
+                        <button class="button2 id=">
                             <a href="http://">
                                 See Source
                                 <img class="source" src="#" alt="">
