fix pop for section 1

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn" id="pop-btn">See Project</button>
+                <button class="btn" id="pop">See Project</button>
             </div>
         </div>
 
@@ -136,53 +136,6 @@
             </ul>
             <div class="action">
                 <button class="btn btn1">See Project</button>
-            </div>
-        </div>
-
-        <div class="Recentwork1">
-            <div class="modal-header">
-                <h1 class="recent-title">Keeping track of hundreds of components website</h1>
-                <div class="crossimg">
-                    <img src="#" alt="">
-                </div>
-            </div>
-            <ul class="languageboxes1">
-                <li class="css-display">css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby on rails</li>
-            </ul>
-
-            <div class="works1">
-                <img class="f-img" src="images/Snapshoot Portfolio.png" alt="" class="worksimg1" />
-                <div class="worksdescription1">
-                    <p class="recent-description">
-                        Lorem Ipsum is simply dummy text of the printing and <br> typesetting industry.
-                        Lorem Ipsum has been the <br> industry's standard dummy text ever since the 1500s,<br>
-                        when an unknown printer took a galley of type and <br> scrambled it 1960s with the
-                        releaLorem Ipsum is simply <br> dummy text of the printing and typesetting industry. <br>
-                        Lorem Ipsum has been the industry's standard dummy <br> text ever since the 1500s,
-                        when an unknown printer <br> took a galley of type and scrambled it 1960s with the <br> releax
-                        map lapora verita.
-                    </p>
-                    <div class="recent-btn">
-                        <button class="button1">
-                            <a href="http://">
-                                See Live
-                                <img class="live" src="#" alt="">
-                            </a>
-
-                        </button>
-
-                        <button class="button2 id=">
-                            <a href="http://">
-                                See Source
-                                <img class="source" src="#" alt="">
-                            </a>
-                        </button>
-                    </div>
-
-                </div>
             </div>
         </div>
 
