add pop-ups to all project cards

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="right-block">
             <img class="img-section1" src="images/Snapshoot Portfolio.png" alt="project image">
             <img class="img-sec1" src="images/Snapshoot Portfolio-section1.png" alt="project image">
-            
+
         </div>
         <div class="left-block">
             <div class="experience">
@@ -136,7 +136,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn btn1">See Project</button>
+                <button class="btn btn1" id="pop1">See Project</button>
             </div>
         </div>
 
@@ -180,7 +180,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn">See Project</button>
+                <button class="btn" id="pop2">See Project</button>
             </div>
         </div>
 
@@ -223,7 +223,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn">See Project</button>
+                <button class="btn" id="pop3">See Project</button>
             </div>
         </div>
 
