fix modals and the closing button

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </li>
             </ul>
             <div class="action">
-                <button class="btn btn1" id="pop1">See Project</button>
+                <button class="btn" id="pop1">See Project</button>
             </div>
         </div>
 
