--- a/index.html
+++ b/index.html
@@ -289,13 +289,14 @@
             a feature that you need built or
             a project that needs coding. I’d love to help with it
         </p>
-        <form action="https://formspree.io/f/meqdkrwy" class="contact-form" method="post">
+        <form action="https://formspree.io/f/meqdkrwy" class="contact-form" method="post" id="form-contact">
             <input type="text" class="input-field" name="name" id="name" placeholder="Your Name" maxlength="30"
                 required>
             <input type="email" class="input-field" name="email" id="email" placeholder="Email" required>
             <textarea name="message" class="text-area" id="message" cols="30" rows="10"
                 placeholder="Write your message here" maxlength="500" required></textarea>
             <input type="submit" class="submit-btn" value="Get in Touch">
+            <small></small>
         </form>
         <hr class="indicator" />
     </section>
