--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <input type="email" class="input-field" name="email" id="email" placeholder="Email" required>
             <textarea name="message" class="text-area" id="message" cols="30" rows="10"
                 placeholder="Write your message here" maxlength="500" required></textarea>
-            <input type="submit" class="submit-btn" value="Get in Touch">
+            <input type="submit" class="submit-btn" id="in-touch" value="Get in Touch">
             <small></small>
         </form>
         <hr class="indicator" />
