add desktop img files for pop up

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
         <div class="right-block00">
             <img class="image-section4" src="images/Snapshoot Portfolio3.png" alt="project image">
             <img class="img-sec4" src="images/Snapshoot Portfolio section 3.png" alt="project image">
+            <img src="./images/Snapshoot Portfolio desk 2.png">
+            <img src="./images/Snapshoot Portfolio desk 1.png">
+            <img src="images/"
         </div>
         <div class="left-block00">
             <div class="experience1">
